Parser/finalFactoredGrammar
This is the grammar obtained after removing recursion and factoring. Hence this is LL1

9/26 - 8:13pm

//<program> --> empty
			| <func list>
			| <data decls> <func list> 
			| <data decls>

<program> --> empty
			| <type name> ID <program z>

<program z> --> left_parenthesis <func decl z> <func z> <func list>
			| comma <id> <id list p> semicolon <data decls> <program z1>
			| semicolon <data decls> <program z1>
			| left_bracket <expression> right_bracket <program z7>

<program z7> --> semicolon <data decls> <program z2>
			| comma <id> <id list p> semicolon <data decls> <program z2>

<program z1> --> <type name> ID left_parenthesis <func decl z> <func z> <func list>
				| empty

<program z2> --> <type name> ID left_parenthesis <func decl z> <func z> <func list>
				| empty

<func list> --> <func> <func list>

<func> --> <func decl> <func z>

<func z> --> semicolon 
		| left_brace <func z6>

<func z6> --> <data decls> <func z7>
			| <statements> right_brace
			| right_brace

<func z7> --> <statements> right_brace
			| right_brace

//<func> --> <func decl> semicolon 
		| <func decl> left_brace <data decls> <statements> right_brace

<func decl> --> <type name> ID left_parenthesis <func decl z>

<func decl z> --> right_parenthesis
				| void <func decl z2>
				| int ID <func decl z3>
				| binary ID  <func decl z4>
				| decimal ID <func decl z5>

<func decl z2> --> right_parenthesis
				 | ID <func decl z6>
				 
<func decl z6> --> right_paranthesis
				|  <non-empty list p> right paranthesis

<func decl z3> --> comma <type name> ID <non-empty list> right_parenthesis
				|  right_parenthesis

<func decl z4> --> comma <type name> ID <non-empty list> right_parenthesis
				|  right_parenthesis
				
<func decl z5> --> comma <type name> ID <non-empty list> right_parenthesis
				|  right_parenthesis

//<func decl> --> <type name> ID left_parenthesis <parameter list> right_parenthesis

<type name> --> int 
				| void 
				| binary 
				| decimal  
				
//<parameter list> --> empty 
				| void 
				| <non-empty list>
				
<non-empty list> --> <type name> ID <non-empty list z>

<non-empty list z> --> empty
				|  <non-empty list p>

<non-empty list p> --> comma <type name> ID <non-empty list>

<data decls> -->  <type name> <id list> semicolon <data decls z>

<data decls z> --> empty 
				| <type name> <id list> semicolon <data decls z>
				
<id list> --> <id> <id list z>

<id list z> --> empty
			  | <id list p>

<id list p> --> comma <id> <id list p z>

<id list p z> --> empty 
				| <id list p>

<id> --> ID <id z>

<id z> -> empty
		| left_bracket <expression> right_bracket								// Refactor

***		

<block statements> --> left_brace <block statements z>
					
<block statements z> --> <statements> right_brace
						| right_brace

<statements> --> <statement> <statements z>

<statements z> --> empty
				|  <statement> <statements z>

<statement> --> ID <statement z>
			| <if statement> 
			| <while statement> 
			| <return statement> 
			| <break statement> 
			| <continue statement> 
			| read left_parenthesis  ID right_parenthesis semicolon 
			| write left_parenthesis <expression> right_parenthesis semicolon 
			| print left_parenthesis  STRING right_parenthesis semicolon 

<statement z> --> left_bracket <expression> right_bracket equal_sign <expression> semicolon
				| equal_sign <expression> semicolon
				| left_parenthesis <statement z1>
				
<statement z1> --> right_parenthesis semicolon
				 | <expr list> right_parenthesis semicolon						 

//<assignment> --> <id> equal_sign <expression> semicolon

//<func call> --> ID left_parenthesis <func call z>

//<func call z> --> right_parenthesis semicolon
			    | <expr list> right_parenthesis semicolon

<expr list> --> <non-empty expr list>

<non-empty expr list> --> <expression> <non-empty expr list p>

<non-empty expr list p> --> comma <expression> <non-empty expr list p>
						  | empty

***

<if statement> --> if left_parenthesis <condition expression> right_parenthesis <block statements>

<condition expression> -->  <condition> <condition expression z>

<condition expression z> --> <condition op> <condition>
							| empty

<condition op> --> double_and_sign 
				 | double_or_sign

<condition> --> <expression> <comparison op> <expression> 

<comparison op> --> == 
				  | != 
				  | > 
				  | >= 
				  | < 
				  | <=
						  
<while statement> --> while left_parenthesis <condition expression> right_parenthesis <block statements>

<return statement> --> return <return statement z>

<return statement z> --> <expression> semicolon 
					 | semicolon 
					 
<break statement> ---> break semicolon 

<continue statement> ---> continue semicolon						  
						  
***

<expression> --> <term> <expression p>

<expression p> --> <addop> <term> <expression p>
				 | empty

<addop> --> plus_sign 
		  | minus_sign 

<term> --> <factor> <term p>

<term p> --> <mulop> <factor> <term p>
			| empty
						  
<mulop> --> star_sign 
		  | forward_slash 

<factor> --> ID <factor z>
			| NUMBER 
			| minus_sign NUMBER 
			| left_parenthesis <expression> right_parenthesis
				  
<factor z> --> empty
			| left_bracket <expression> right_bracket 
			| left_parenthesis <factor z1>
			
<factor z1> --> right_parenthesis
			  | <expr list> right_parenthesis
						  
