Parser/submission/Parser.java
/***
	Author: Gurunath Ashok Hanamsagar
	Unity ID: ghanams
***/
import java.util.*;
import java.io.*;


public class Parser extends ScannerProj{
	static Map<String,List<String>> nonTerms = new HashMap<String, List<String>>();
	static Map<String, String> terms = new HashMap<String, String>();
	static Token nextToken;
	static ScannerProj scObj;
	static boolean tokenTaken;
	static int count;
	static int varCount;
	static int funcCount;
	static int statementCount;

	/* Function to create a hash of all the non terminals */
	public static void createHash(String fileName){		
		
		try{
			Scanner sc = new Scanner(new File(fileName));
			while(sc.hasNext()){
				
				String str = sc.nextLine();
				if(str.length() <= 5)
					continue;
				int i=0;
				String[] sides = str.split("`");
				sides[0].trim();
				sides[1].trim();
				String[] vals = sides[1].split("@");
				////System.out.println("\n" + sides[0] + ":");
				List<String> strList = new ArrayList<String>();
				for(String s: vals){
					s.trim();
					strList.add(s);
					//System.out.print(s);
				}
				
				nonTerms.put(sides[0], strList);
				//System.out.print(nonTerms.get(sides[0]));
			}
			
		}
		catch(Exception ex){
			
		}
		
	}
	
	public static void matchToken(Token token){
		
		if(token.tokenType == ScannerProj.TokenType.NONE && token.tokenName.equals("first_one")){
			nextToken = scObj.getNextToken();
			return;
		}
		
		if ( nextToken.tokenType == token.tokenType){
			//nextToken = scObj.getNextToken().getTokenName();

			if(scObj.hasMoreTokens())
				nextToken = scObj.getNextToken();
		}
		
		else{
			//System.out.println("Error");
		}
		
	}
	
	/* This function is called whenever an error/invalid condition is met.  */
	public static void printError(String str){
		
		System.out.println("Fail");
		//System.out.println("*********ERRORRR*********");
		//System.out.println(" Error with message : " + str + "\n\n");
		//stopExecution();
		System.exit(0);
		
	}
	
	/* This function loads a new token if new one is present. Else, loads the last unused token */
	public static void loadToken(){
		if(!tokenTaken){
			if(scObj.hasMoreTokens())
				nextToken = scObj.getNextToken();
			
			else{
				//System.out.println(" Out of tokens !! ");
				nextToken.tokenName="$";
			}
			if(nextToken.tokenType==ScannerProj.TokenType.META){
				tokenTaken=false;
				loadToken();
			}
			//System.out.println("in load token token = " + nextToken.tokenName + " type = " + nextToken.tokenType);
			tokenTaken = true;
		}
	}
	
	/* The first non terminal to be called. */
	public static void program(){
		
		//System.out.println("Entered Program " + nonTerms.get("typename"));
		loadToken();
		
		 //System.out.println(count++ + "token = " + nextToken.tokenName);
		if ( nonTerms.get("typename").contains(nextToken.tokenName) ){
			
			tokenTaken=false;
			loadToken();
			statementCount++;
			 //System.out.println(count++ +"token = " + nextToken.tokenName);
			if( nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"token = " + nextToken.tokenName);
				if(nonTerms.get("programz").contains(nextToken.tokenName))
					program_z();
				else
					printError("typename error");
			}
			else{
				printError("ID error from program");
			}
		}
		else{
			printError("typename Error from Program");
		}
		
	}
	
	public static void program_z(){
		
		loadToken();
		//System.out.println(count++ + " prog z token = " + nextToken.tokenName);
		//System.out.println(count++ +"token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals("(")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"program z token = " + nextToken.tokenName);
			if(nonTerms.get("funcdeclz").contains(nextToken.tokenName)){
				func_decl_z();
				
				loadToken();
				//System.out.println(count++ +" token = " + nextToken.tokenName);
				if(nonTerms.get("funcz").contains(nextToken.tokenName)){
					func_z();
					
					loadToken();
					//System.out.println(count++ +"token = " + nextToken.tokenName);
					if(nonTerms.get("funclistz").contains(nextToken.tokenName)){
						func_list_z();
					}
					else{
						printError(" programz. funclist");
					}
				}
				else{
					printError(" programz. funcz");
				}
			}
			else{
				printError(" programz. funcdeclz");
			}
		}
		else if(nextToken.tokenName.equals(",")){
			tokenTaken=false;
			
			loadToken();
			if( nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;

				loadToken();
				if(nonTerms.get("idlistp").contains(nextToken.tokenName)){
					func_z();
					
					loadToken();
					if(nextToken.tokenName.equals(";")){
						tokenTaken=false;
						
						loadToken();
						if(nonTerms.get("datadecls").contains(nextToken.tokenName)){
							data_decls();
							
							loadToken();
							if(nonTerms.get("programz1").contains(nextToken.tokenName)){
								program_z1();
							}
							else{
								printError(" programz. programz1");
							}
						}
						else{
							printError("programz. datadecls");
						}
					}
					else{
						printError(" programz. semicolon");
					}
				}
				else{
					printError(" programz. idlistp");
				}
			}
			else{
				printError(" programz. id");
			}
		}
		else if(nextToken.tokenName.equals(";")){
			tokenTaken=false;
			
			loadToken();
			if(nonTerms.get("datadecls").contains(nextToken.tokenName)){
				data_decls();
				
				loadToken();
				if(nonTerms.get("programz1").contains(nextToken.tokenName)){
					program_z1();
				}
				else{
					printError("Func programz. In ; In programz1");
				}
			}
			else{
				printError("Func programz. In ; In data_decls");
			}
		}
		else if(nextToken.tokenName.equals("[")){
			tokenTaken=false;
			
			loadToken();
			if(nonTerms.get("expression").contains(nextToken.tokenName)
			|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER
			|| nextToken.tokenType==ScannerProj.TokenType.NUMBER){
				expression();
				
				loadToken();
				if(nextToken.tokenName.equals("]")){
					tokenTaken=false;
					
					loadToken();
					if(nonTerms.get("programz7").contains(nextToken.tokenName)){
						program_z7();
					}
					else{
						printError("In programz. In [. In programz7");
					}
				}
				else{
					printError("In programz. In [. In ]");
				}
			}
			else{
				printError("In programz. In [. In expression");
			}
			
		}else{
			printError(" Error at last else of programz");
		}
	}
	
	public static void program_z7(){
		
		loadToken();
		//System.out.println(count++ + " prog z7 token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(";")){
			tokenTaken=false;
			
			loadToken();
			if(nonTerms.get("datadecls").contains(nextToken.tokenName)){
				data_decls();
				
				loadToken();
				if(nonTerms.get("programz1").contains(nextToken.tokenName)){
					program_z1();
				}
				else{
					printError("Func programz7. In ; In programz1");
				}
			}
		}
		else if(nextToken.tokenName.equals(",")){
			tokenTaken=false;
			
			loadToken();
			if( nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;

				loadToken();
				if(nonTerms.get("idlistp").contains(nextToken.tokenName)){
					func_z();
					
					loadToken();
					if(nextToken.tokenName.equals(";")){
						tokenTaken=false;
						
						loadToken();
						if(nonTerms.get("datadecls").contains(nextToken.tokenName)){
							data_decls();
							
							loadToken();
							if(nonTerms.get("programz1").contains(nextToken.tokenName)){
								program_z1();
							}
							else{
								printError(" programz. programz1");
							}
						}
						else{
							printError("programz. datadecls");
						}
					}
					else{
						printError(" programz. semicolon");
					}
				}
				else{
					printError(" programz. idlistp");
				}
			}
		}
		
	}
	
	public static void program_z1(){
		
		loadToken();
		//System.out.println(count++ + " prog z1 token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals("$")){
			return;
		}
		else if(nonTerms.get("typename").contains(nextToken.tokenName)){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				if(nextToken.tokenName.equals("(")){
					tokenTaken=false;
					
					loadToken();
					if(nonTerms.get("funcdeclz").contains(nextToken.tokenName)){
						func_decl_z();
						
						loadToken();
						if(nonTerms.get("funcz").contains(nextToken.tokenName)){
							func_z();
							
							loadToken();
							if(nonTerms.get("funclist").contains(nextToken.tokenName)){
								func_list();
								
								return;
							}
							else{
								printError(" Error from program_z1 ");
							}
						}
						else{
							printError(" Error from program_z1 ");
						}
					}
					else{
						printError(" Error from program_z1 ");
					}
				}
				else{
					printError(" Error from program_z1 ");
				}
			}
			else{
				printError(" Error from program_z1 ");
			}
		}
		else{
			printError(" Error from program_z1 ");
		}
		
	}
	
	public static void func_list(){
		
		loadToken();
		//System.out.println(count++ + " func list 1 token=" + nextToken.tokenName);
		if(nonTerms.get("func").contains(nextToken.tokenName)){
			func();
			
			loadToken();
			//System.out.println(count++ + " func list 2 token=" + nextToken.tokenName);
			if(nonTerms.get("funclistz").contains(nextToken.tokenName)){
				func_list_z();
				
				return;
			}
			else{
				printError("Error in func_list");
			}
		}
		else{
			printError("Error in func_list");
		}
	}
	
	public static void func_list_z(){
		
		loadToken();
		if(nextToken.tokenName.equals("$")){
			return;
		}
		else if(nonTerms.get("funclist").contains(nextToken.tokenName)){
			func_list();
			
			return;
		}
		else{
			printError("Error func list z");
		}
		
	}
	
	public static void func(){
		
		loadToken();
		if(nonTerms.get("funcdecl").contains(nextToken.tokenName)){
			func_decl();
			
			loadToken();
			if(nonTerms.get("funcz").contains(nextToken.tokenName)){
				func_z();
				
				return;
			}
			else{
				printError(" error func");
			}
		}
		else{
			printError(" error func");
		}
	}
	
	public static void func_z(){
		
		loadToken();
		//System.out.println(count++ + "funcz" + nextToken.tokenName);
		if(nextToken.tokenName.equals(";")){
			tokenTaken=false;
			return;
		}
		else if(nextToken.tokenName.equals("{")){
			tokenTaken=false;
			funcCount++;
			
			loadToken();
			//System.out.println(count++ + "funcz ()" + nextToken.tokenName);
			if(nonTerms.get("funcz6").contains(nextToken.tokenName)
			|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				func_z6();	
			
				return;	
			}
			else{
				printError(" error func z");
			}
		}
		else
			printError(" Error in func_z");
	}
	
	public static void func_z6(){
		
		loadToken();
		//System.out.println(count++ + "funcz6" + nextToken.tokenName);
		if( nonTerms.get("datadecls").contains(nextToken.tokenName)){
			data_decls();
			
			loadToken();
			////System.out.println(count++ + "funcz6 2" + nextToken.tokenName);
			if(nonTerms.get("funcz7").contains(nextToken.tokenName)
			|| nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				func_z7();
			}
			else
				printError("Error is func z6. Call to z7");
		}
		else if( nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER 
			||  nonTerms.get("statements").contains(nextToken.tokenName) ){
			//tokenTaken=false;
			statements();
			
			loadToken();
			if(nextToken.tokenName.equals("}")){
				tokenTaken=false;
				return;
			}
			else
				printError(" Error in func_z6 1");
		}	
		else if(nextToken.tokenName.equals("}"))
			return;
		else
			printError(" Error in func_z6 2");
			
	}
	public static void func_z7(){
		
		loadToken();
		//System.out.println(count++ + " func z7 token = " + nextToken.tokenName);
		if( nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER 
			||  nonTerms.get("statements").contains(nextToken.tokenName) ){
			statements();
			
			loadToken();
			//System.out.println(count++ + " func z7 2 token = " + nextToken.tokenName);
			if(nextToken.tokenName.equals("}")){
				tokenTaken=false;
				return;
			}
			else
				printError("func z7 1");
		}
		else if(nextToken.tokenName.equals("}")){
			tokenTaken=false;
			return;
		}
		else
			printError(" Error in func_z");
			
	}
	
	public static void func_decl(){
		
		loadToken();
		//System.out.println(count++ + "funcdecl" + nextToken.tokenName);
		if( nonTerms.get("typename").contains(nextToken.tokenName) ){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ + "token = " + nextToken.tokenName);
			if(nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ + "token = " + nextToken.tokenName);
				if(nextToken.tokenName.equals("(")){
					tokenTaken=false;
					
					loadToken();
					if(nonTerms.get("funcdeclz").contains(nextToken.tokenName)){
						func_decl_z();
						
						return;
					}
					else{
						printError("func decl error 1");
					}
				}
				else{
					printError("func decl error 2");
				}
			}
			else{
				printError("func decl error 3");
			}
		}
		else{
			printError("func decl error 4");
		}
	}
	
	public static void func_decl_z(){
		
		loadToken();
		//System.out.println(count++ + " /*/* token in funcdeclz = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(")")){
			tokenTaken=false;
			
			return;
		}
		else if(nextToken.tokenName.equals("void")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ + " token in 1 funcdeclz = " + nextToken.tokenName );
			if(nonTerms.get("funcdeclz2").contains(nextToken.tokenName)){

				func_decl_z2();
				return;
			}
			else{
				printError("func decl z");
			}
		}
		else if(nextToken.tokenName.equals("int")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"fdz int token = " + nextToken.tokenName);
			if(nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"|||fdz int token = " + nextToken.tokenName);
				if(nonTerms.get("funcdeclz3").contains(nextToken.tokenName)){
					//System.out.println("weeeee");
					func_decl_z3();
					
					return;
				}
				else{
					printError("func decl z");
				}
			}
			else{
				printError("func decl z");
			}
		}
		else if(nextToken.tokenName.equals("binary")){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				if(nonTerms.get("funcdeclz3").contains(nextToken.tokenName)){
					func_decl_z3();
					
					return;
				}
				else{
					printError("func decl z");
				}
			}
			else{
				printError("func decl z");
			}
		}
		else if(nextToken.tokenName.equals("decimal")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"fdz dec token = " + nextToken.tokenName);
			if(nextToken.tokenType == ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"fdz dec token = " + nextToken.tokenName);
				if(nonTerms.get("funcdeclz3").contains(nextToken.tokenName)){
					func_decl_z3();
					
					return;
				}
				else{
					printError("func decl z");
				}
			}
			else{
				printError("func decl z");
			}
		}
		else{
			printError("func decl z");
		}
	}
		
	public static void func_decl_z2(){
		
		loadToken();
		//System.out.println(count++ + " in func decl z2 token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(")")){
			tokenTaken=false;
			
			return;
		}
		else if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			tokenTaken=false;
			
			loadToken();
			if(nonTerms.get("funcdeclz6").contains(nextToken.tokenName)){
				func_decl_z6();
				
				return;
			}
			else{
				printError("func decl z 2");
			}
		}
		else{
			printError("func decl z2");
		}
	}
	public static void func_decl_z6(){
		
		loadToken();
		if(nextToken.tokenName.equals(")")){
			tokenTaken=false;
			
			return;
		}
		else if(nonTerms.get("non-emptylistp").contains(nextToken.tokenName)){
			non_empty_list_p();
			
			loadToken();
			if(nextToken.tokenName.equals(")")){
				tokenTaken=false;
				
				return;
			}
			else{
				printError("func decl z6");
			}
		}
		else{
			printError("func decl z6");
		}
	}
	public static void func_decl_z3(){
		
		loadToken();
		//System.out.println(count++ +"fdz3 token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(")")){
			tokenTaken=false;
			
			return;
		}
		else if(nextToken.tokenName.equals(",")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"fdz3 token = " + nextToken.tokenName);
			if(nonTerms.get("typename").contains(nextToken.tokenName)){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"fdz3 token = " + nextToken.tokenName);
				if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
					tokenTaken=false;
					
					loadToken();
					//System.out.println(count++ +"/*/*/*fdz3 token = " + nextToken.tokenName);
					if(nonTerms.get("non-emptylistp").contains(nextToken.tokenName)){
						non_empty_list_p();
						
						loadToken();
						if(nextToken.tokenName.equals(")")){
							tokenTaken=false;
							
							return;	
						}
						else{
							printError("func decl z 3");
						}
					}
					else{
						printError("func decl z 3");
					}
				}
				else{
					printError("func decl z 3");
				}
			}
			else{
				printError("func decl z 3");
			}
		}
		else{
			printError("func decl z 3");
		}
	}
	
	public static void type_name(){
		
		loadToken();
		if(nextToken.tokenName.equals("int") || nextToken.tokenName.equals("void") 
			|| nextToken.tokenName.equals("binary") || nextToken.tokenName.equals("decimal")){
				tokenTaken=false;
				
				return;
			}
		else{
			printError("Error in type name");
		}
	}
	
	public static void non_empty_list(){
		
		loadToken();
		//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
		if(nonTerms.get("typename").contains(nextToken.tokenName)){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
				if(nonTerms.get("non-emptylistz").contains(nextToken.tokenName)){
					non_empty_list_z();
					
					return;
				}
				else{
					printError("non empty list");
				}
			}
			else{
				printError("non empty list");
			}
		}
		else{
			printError("non empty list");
		}
	}
	
	public static void non_empty_list_z(){
		
		loadToken();
		if(nonTerms.get("non-emptylistp").contains(nextToken.tokenName)){
			return;
		}
		else if(nextToken.tokenName.equals(")")){
			return;
		}
		else{
			printError("non empty list z");
		}
	}
	
	public static void non_empty_list_p(){
		
		loadToken();
		//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(",")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
			if(nonTerms.get("typename").contains(nextToken.tokenName)){
				tokenTaken=false;
				
				loadToken();
				//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
				if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
					tokenTaken=false;
					
					loadToken();
					//System.out.println(count++ +"nelptoken = " + nextToken.tokenName);
					if(nonTerms.get("non-emptylist").contains(nextToken.tokenName)){
						non_empty_list_p();
						
						return;
					}
					else{
						printError("non empty list p");
					}
				}
				else{
					printError("non empty list p");
				}
			}
			else{
				printError("non empty list p");
			}
		}
		else if(nonTerms.get("non-emptylistp").contains(nextToken.tokenName)){
			return;
		}
		else{
			printError("non empty list p");
		}
	}
	
	public static void data_decls(){
		
		loadToken();
		//System.out.println(count++ + " data decls token = " + nextToken.tokenName);
		if(nonTerms.get("typename").contains(nextToken.tokenName)){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				
				id_list();
				loadToken();
				//System.out.println(count++ + " data decls ; token = " + nextToken.tokenName);
				if(nextToken.tokenName.equals(";")){
					tokenTaken=false;
					
					loadToken();
					//System.out.println(count++ + " data decls 3 ; token = " + nextToken.tokenName);
					if(nonTerms.get("datadeclsz").contains(nextToken.tokenName)
					|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER
					|| nonTerms.get("funcz7").contains(nextToken.tokenName)){
						data_decls_z();
						
						return;
					}
					else{
						printError("data decls 1");
					}
				}
				else{
					printError("data decls 2");
				}
			}
			else{
				printError("data decls 3");
			}
		}
		else{
			printError("data decls 4");
		}
	}
	
	public static void data_decls_z(){
		
		loadToken();
		if(nonTerms.get("typename").contains(nextToken.tokenName)){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				
				id_list();
				loadToken();
				if(nextToken.tokenName.equals(";")){
					tokenTaken=false;
					
					loadToken();
					if(nonTerms.get("datadeclsz").contains(nextToken.tokenName)
					|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER
					|| nonTerms.get("funcz7").contains(nextToken.tokenName)){
						data_decls_z();
						
						return;
					}
					else{
						printError("data decls z 1");
					}
				}
				else{
					printError("data decls z-2");
				}
			}
			else{
				printError("data decls z-3");
			}
		}
		else if(nonTerms.get("funcz7").contains(nextToken.tokenName)
		|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			return;
		}
		else{
			printError("data decls z-4");
		}
	}
	
	public static void id_list(){
		
		loadToken();
		//System.out.println(count++ + " id list token = " + nextToken.tokenName);
		if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			
			id();
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER 
			|| nonTerms.get("idlistz").contains(nextToken.tokenName)){
				
				id_list_z();
			}
			else{
				printError("id list");
			}
		}
		else{
			printError("id list");
		}
	}
	
	public static void id_list_z(){
		
		loadToken();
		//System.out.println(count++ + " id list z token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(",")){
			id_list_p();
			
			return;
		}
		else if(nextToken.tokenName.equals(";")){
			return;
		}
		else
			printError("Error in id_list_z");
	}
	
	public static void id_list_p(){
		
		loadToken();
		//System.out.println(count++ + " id list p token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(",")){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				id();
				
				loadToken();
				if(nextToken.tokenName.equals(",")
				|| nextToken.tokenName.equals(";")){
					id_list_p_z();
				}
				else{
					printError("id list p");
				}
			}
			else{
				printError("id list p");
			}
		}
		else{
			printError("id list p");
		}
	}
	
	public static void id_list_p_z(){
		
		loadToken();
		//System.out.println(count++ + " id list p z token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals(",")){
			id_list_p();
			
			return;
		}
		else if(nextToken.tokenName.equals(";"))
			return;
		
		else{
			printError("id list p z");
		}
	}
	
	public static void id(){
		
		loadToken();
		//System.out.println(count++ + " id token = " + nextToken.tokenName);
		if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ + " id 2 token = " + nextToken.tokenName + "bool=" + nonTerms.get("idz").contains(nextToken.tokenName));
			if(nonTerms.get("idz").contains(nextToken.tokenName)){
				
				id_z();
				return;
			}
			else{
				printError("id");
			}
		}
		else{
			printError("id");
		}
	}
	
	public static void id_z(){
		
		loadToken();
		//System.out.println(count++ + " id z token = " + nextToken.tokenName);
		if(nextToken.tokenName.equals("[")){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER
			|| nextToken.tokenType==ScannerProj.TokenType.NUMBER){
				expression();
				
				loadToken();
				if(nextToken.tokenName.equals("]")){
					tokenTaken=false;
					
					return;
				}
				else{
					printError("id z");
				}
			}
			else{
				printError("id z");
			}
		}
		else if(nonTerms.get("idz").contains(nextToken.tokenName)){
			
			return;
		}
		else{
			printError("Error in id z");
		}
	}
	
	public static void block_statements(){
		
		loadToken();
		if(nextToken.tokenName.equals("{")){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ + "in block_statements token = " + nextToken.tokenName);
			if(nonTerms.get("blockstatementsz").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				block_statements_z();
				
				return;
			}
			else{
				printError("block statements");
			}
		}
		else{
			printError("Error from block statements");
		}
		
	}
	
	public static void block_statements_z(){
		
		loadToken();
		if(nextToken.tokenName.equals("}")){
			tokenTaken=false;
			
			return;
		}
		else if(nonTerms.get("statements").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			statements();
			
			loadToken();
			if(nextToken.tokenName.equals("}")){
				tokenTaken=false;
				
				return;
			}
			else{
				printError("block statements z");
			}
		}
		else
			printError("block statements z");
	}
	
	public static void statements(){
		
		loadToken();
		//System.out.println(count++ +"statements token = " + nextToken.tokenName);
		if(nonTerms.get("statement").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			
			statement();
			
			loadToken();
			if(nonTerms.get("statementsz").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				statements_z();
				
				return;
			}
			else{
				printError("statements ");
			}
		}
		else if(nextToken.tokenName.equals("}")){
			return;
		}
		else{
			printError("statements error");
		}
	}
	
	public static void statements_z(){
		
		loadToken();
		if(nonTerms.get("statement").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			
			statement();
			
			loadToken();
			if(nonTerms.get("statementsz").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				statements_z();
				
				return;
			}
			else{
				printError("statements z-1");
			}
		}
		else if(nonTerms.get("statements").contains(nextToken.tokenName))
			return;
			
		else
			printError("Error in statements_z-2");
	}
	
	public static void statement(){
		
		loadToken();
		//System.out.println(count++ +"statement token = " + nextToken.tokenName);
		if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
			tokenTaken=false;
			
			loadToken();
			//System.out.println(count++ +"statement 2 token = " + nextToken.tokenName);
			if(nonTerms.get("statementz").contains(nextToken.tokenName)
				|| nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
				statement_z();
				
				return;
			}
			else{
				printError("statement");
			}
		}
		else if(nextToken.tokenName.equals("if")){
			
			if_statement();
			return;
		}
		else if(nextToken.tokenName.equals("while")){
			
			while_statement();
			return;
		}
		else if(nextToken.tokenName.equals("break")){
			
			break_statement();
			return;
		}
		else if(nextToken.tokenName.equals("return")){
			
			return_statement();
			return;
		}
		else if(nextToken.tokenName.equals("continue")){
			
			continue_statement();
			return;
		}
		else if(nextToken.tokenName.equals("read")){
			tokenTaken=false;
			
			loadToken();
			if(nextToken.tokenName.equals("(")){
				tokenTaken=false;
				
				loadToken();
				if(nextToken.tokenType==ScannerProj.TokenType.IDENTIFIER){
					tokenTaken=false;
					
					loadToken();
					if(nextToken.tokenName.equals(")")){
						tokenTaken=false;
						
						loadToken();
						if(nextToken.tokenName.equals(";")){
							tokenTaken=false;
							
							return;
						}
						else{
							printError("statement");
						}
					}
